--- a/vue-mt-system/package.json
+++ b/vue-mt-system/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jiaminghi/data-view": "^2.10.0",
     "core-js": "^3.6.5",
+    "echarts": "^4.6.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
