--- a/vue-mt-system/package.json
+++ b/vue-mt-system/package.json
@@ -9,9 +9,15 @@
   },
   "dependencies": {
     "@jiaminghi/data-view": "^2.10.0",
+    "boxicons": "^2.0.7",
     "core-js": "^3.6.5",
     "echarts": "^4.6.0",
-    "vue": "^2.6.11"
+    "material-design-icons": "^3.0.1",
+    "vue": "^2.6.11",
+    "vue-awesome": "^4.3.1",
+    "vuesax": "^4.0.1-alpha.25",
+    "vuex": "^3.6.2",
+    "vuex-i18n": "^1.13.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -20,8 +26,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "material-design-icons-iconfont": "^6.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
